# cofactr-client

./: .gitignore  .pylintrc  MANIFEST  README.md  ex.py  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
cofactr/: cursor.py  graph.py  helpers.py
cofactr/odm/: core.py  offer.py  part.py  seller.py
cofactr/schema/: __init__.py  types.py
cofactr/schema/flagship/: order.py
cofactr/schema/flagship_cache_v3/: part.py
cofactr/schema/flagship_cache_v5/: part.py
cofactr/schema/flagship_v2/: offer.py  part.py
cofactr/schema/flagship_v7/: seller.py
cofactr/schema/flagship_v9/: offer.py
cofactr/schema/price_solver_v2/: part.py
cofactr/schema/price_solver_v3/: part.py
odm/: core.py  part.py
tests/: test_core.py  test_graph.py  test_graph_retry.py  test_retry.py
tests/data/test_graph_retry/: get_products_by_ids.pkl
tests/odm/: test_core.py  test_part.py
