[tool.poetry]
name = "cofactr"
version = "0.1.0"
description = "Client library for accessing Cofactr data."
authors = ["Cofactr"]

[tool.poetry.dependencies]
python = "^3.9"
urllib3 = "^1.26.9"

[tool.poetry.dev-dependencies]
mypy = "^0.942"
black = "^22.3.0"
types-urllib3 = "^1.26.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
